oracle/prod/rsshub/rsshub-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rsshub
  namespace: rsshub

spec:
  rules:
    - host: rsshub.haijin666.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  rsshub
                port:
                  number: 1200
